Add lmdbjava to read the qsitelinks file